@@ -106,8 +106,6 @@ number lists
 Discussion is still open.
 .SH AUTHOR
 grubert@users.sourceforge.net
-
-Date: 2006-10-22
 .SH COPYRIGHT
 public domain
 .\" Generated by docutils manpage writer.
