@@ -78,6 +78,7 @@ totest['simple'] = [
 :Version: 0.1
 :Manual section: 1
 :Manual group: text processing
+:Arbitrary field: some text
 
 SYNOPSIS
 ========
@@ -134,7 +135,7 @@ Show this help message and exit.
 .SH AUTHOR
 someone@somewhere.net
 
-Date: 2009-08-05
+Arbitrary field: some text
 .SH COPYRIGHT
 public domain
 .\" Generated by docutils manpage writer.
